fix(root view): collapse table in readme

--- a/_sass/_view.scss
+++ b/_sass/_view.scss
@@ -185,6 +185,9 @@ $view-field-value-max-height: 170px;
   img {
     max-width: 100%;
   }
+  table {
+    border-collapse: collapse !important;
+  }
   td, th {
     border: 1px solid lightgrey;
     padding: 7px;
